Initialize camera position

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/StartLevel.StartLevel
 EditorStartupMap=/Game/StartLevel.StartLevel
+GlobalDefaultGameMode=/Game/Blueprints/MyGameMode.MyGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
