--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,6 +17,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/Engine.RendererSettings]
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
+r.DefaultFeature.AutoExposure=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/GraphShip")
